Change pst-color-text-muted to fix too light navbar links

--- a/src/scss/sphinx-pythia-theme.scss
+++ b/src/scss/sphinx-pythia-theme.scss
@@ -28,11 +28,11 @@
     --pst-color-primary: var(--spt-color-blue) !important;
     --pst-color-primary-hover: var(--spt-color-blue-lighter) !important;
     --pst-color-secondary: var(--spt-color-blue-lightest) !important;
-    --pst-color-link: #1a648f !important; /* The same value wth var(--pst-color-primary), using var() didn't work; don't know why) */
-    --pst-color-link-hover: #9cbfd5 !important; /* The same value wth var(--pst-color-secondary), using var() didn't work; don't know why) */
+    --pst-color-link: #1a648f !important; /* The same value with var(--pst-color-primary), using var() didn't work; don't know why) */
+    --pst-color-link-hover: #9cbfd5 !important; /* The same value with var(--pst-color-secondary), using var() didn't work; don't know why) */
     --pst-color-headerlink: var(--spt-color-gray-300) !important;
-    --pst-color-headerlink-hover: var(--spt-color-gray-100) !important;
-    --pst-color-text-muted: #dee2e6 !important; /* Normally wouldn't be needed to set explicitly, but top-navbar tabs' color didn't work without this */
+    --pst-color-headerlink-hover: var(--spt-color-gray-100)!important;
+    --pst-color-text-muted: #6c757d !important; /* The same value with var(--spt-color-gray-500), using var() didn't work; don't know why) */
 
     --tabs-size-label: 0.8rem !important;
     --tabs-color-label-active: rgba(var(--pst-color-primary), 1) !important;
